Process Hacker

2.15
 * NEW/IMPROVED:
   * Updated ToolStatus plugin
   * Added DEP Status column
 * FIXED:
   * Image file versions
   * Workaround for an IPv6-related bug in Windows XP

2.14
 * NEW/IMPROVED:
   * ExtendedServices plugin: Option to add a Services menu 
     for processes
   * Command line support for setting process priority and 
     I/O priority
   * Improved termination of explorer.exe
 * FIXED:
   * Icon should restore the main window if it is minimized
   * System Information window crashes
   * Hide Processes From Other Users and Hide Signed Processes 
     settings are now saved
   * Font selection on Windows XP
   * ToolStatus plugin: Always on Top status being reset by 
     Find Window
   * Service-related crashes
   * WindowExplorer plugin: sorting in tree list
   * Process minidump creation with old versions of dbghelp.dll

2.13
 * NEW/IMPROVED:
   * Added copy support to PE viewer
   * Added Connect Time, Disconnect Time and Last Input Time 
     to session properties
   * Added more working set counters to the Statistics tab
 * FIXED:
   * Column sort arrows
   * CPU usage calculations

2.12
 * NEW/IMPROVED:
   * Updated KProcessHacker for Windows 7 SP1
   * Added elevation support for more actions
   * Added ability to disable plugins
   * Updated ToolStatus plugin
   * Added Remote Control for sessions
   * More command line options
 * FIXED:
   * Memory leaks
   * Run As issues with different sessions

2.11
 * NEW/IMPROVED:
   * Added WS Watch and other features to ExtendedTools 
     plugin
   * Added WindowExplorer plugin
   * Properties for hidden processes
   * Improved menus
   * Debug console can now be closed without affecting the 
     entire program
 * FIXED:
   * Always on Top issues
   * Hang when setting DEP status of a terminating process
   * Encoding bug in NetworkTools plugin
   * LSA interfacing issues
   * Creating dumps of self

2.10
 * NEW/IMPROVED:
   * KProcessHacker is now signed, so it works on 64-bit 