@@ -7,6 +7,7 @@ Process Hacker
  * FIXED:
    * Image file versions
    * Workaround for an IPv6-related bug in Windows XP
+   * DPCs and Interrupts in System Information tooltips
 
 2.14
  * NEW/IMPROVED:
